--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.session.store-type=none
+
+spring.datasource.url=jdbc:mysql://localhost/chat_database
+spring.datasource.username=antonid
+spring.datasource.password=DfotgbpltW1234
+
