1. Работающий fcm чат. 2. Шифр цезаря + возможность увеличивать кол-во шифров не меняя клиентский код. 3. Рефакторинг.

--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,19 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <!--FCM-->
+        <dependency>
+            <groupId>de.bytefish.fcmjava</groupId>
+            <artifactId>fcmjava-core</artifactId>
+            <version>2.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>de.bytefish.fcmjava</groupId>
+            <artifactId>fcmjava-client</artifactId>
+            <version>2.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
